--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>sell</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="static/css/reset.css">
+    <!-- <link rel="stylesheet" type="text/css" href="src/common/styles/icon.css"> -->
   </head>
   <body>
     <div id="app"></div>
